# thala

./: .env.example  .gitignore  .gitmodules  .pylintrc  .thala  .venv  .worktree-copy  CLAUDE.md  LICENSE  README.md  docs  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test_document_processing.py
core/: README.md  config.py  embedding.py
docs/: academic-literature-review-workflow-plan.md  architecture.md  langsmith.md  logging.md  models.md  patterns.md  restructuring_plan.md  stack.md  structured_response.md  style.md  supervised.md  supervision_loops_proposal.md  traces.md  workflow_config.md  workflow_return_field_dependencies.md
langchain_tools/: README.md  __init__.py  base.py  book_search.py  deep_research.py  document_processing.py  expand_context.py  firecrawl.py  openalex.py  paper_corpus.py  perplexity.py  search_memory.py  store_search.py
mcp_server/: __init__.py  embedding.py  embedding_utils.py  errors.py  response_utils.py  server.py  store_utils.py  validation_utils.py
scripts/: backfill_quartz_reviews.py  format_citations_apa.py  gc_stores.py  illustrate_articles.py  illustrate_deep_dive_3.py  marker_stress_test.py  rerun_combine.py  rerun_enhance.py  rerun_evening_reads.py  rerun_synthesis.py  rerun_web_research_team.py  reset.sh  substack_publish.py  test_smart_routing.py  topic_to_substack.py
services/: README.md  monitor.py  services.sh
testing/: README.md  analyze_trace_structure.py  conftest.py  retrieve_langsmith_run.py  test_academic_lit_review.py  test_book_finding.py  test_cache.py  test_document_processing.py  (+21 more)
(+1494 files in other folders)
