[project]
name = "thala"
version = "0.1.0"
description = "Knowledge management and research workflow system"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (no external services)",
    "integration: marks tests as integration tests (uses testcontainers)",
    "slow: marks tests as slow (>30s)",
    "llm: marks tests that make real LLM API calls (requires API keys, costs money)",
]
filterwarnings = [
    "ignore::DeprecationWarning:langchain.*:",
    "ignore::DeprecationWarning:pydantic.*:",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["core", "langchain_tools", "mcp_server", "workflows", "tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
